Word boundaries are checked only for word characters

--- a/playground/Untitled.ipynb
+++ b/playground/Untitled.ipynb
@@ -34,48 +34,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['(\\\\W)берег моря(\\\\W)', '\\\\g<1>бЕрег мОря\\\\g<2>', 'b', '0'],\n",
-       " ['(\\\\W)грозы(\\\\W)', '\\\\g<1>грозЫ\\\\g<2>', 'b', '0'],\n",
-       " ['(\\\\W)ночь', '\\\\g<1>НОЧЬ', 'l', '1'],\n",
-       " ['ога(\\\\W)', 'ОГА\\\\g<1>', 'r', '1'],\n",
-       " ['(\\\\w+([авея]ни[еийюя]|тви[еию]|ейся|елем|ики|ишка|нник|(в|д|к|л|м|н|т)ой|ой|ни(и|й|ям)|ост(и|ь)|ров|сах|сил(а|е|ой|у|ы)|сков|ства|тел(и|ь|я)|ци(и|й)|(и|ч|ш|щ|ь)ей|\\\\Bей)\\\\b\\\\s?(\\\\w+)?)\\\\s{1,4}(\\\\bземли\\\\b)',\n",
-       "  '\\\\1 землИ',\n",
-       "  'n',\n",
-       "  '0']]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open(\"dict_example.txt\", \"r\") as file:\n",
-    "    dic = file.readlines()\n",
-    "    \n",
-    "repl = list(map(lambda el: el.replace('\\n', '').split('/'), dic))\n",
-    "for r in repl:\n",
-    "    if r[2] == 'b':\n",
-    "        r[0] = '(\\W)' + r[0] + '(\\W)'\n",
-    "        r[1] = '\\g<1>' + r[1] + '\\g<2>'\n",
-    "    if r[2] == 'r':\n",
-    "        r[0] = r[0] + '(\\W)'\n",
-    "        r[1] = r[1] + '\\g<1>'\n",
-    "    if r[2] == 'l':\n",
-    "        r[0] = '(\\W)' + r[0]\n",
-    "        r[1] = '\\g<1>' + r[1]\n",
-    "        \n",
-    "repl"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -101,7 +59,7 @@
     "with open(\"dict_example.txt\", \"r\") as file:\n",
     "    dic = file.readlines()\n",
     "    \n",
-    "repl = list(map(lambda el: el.replace('\\n', '').split('/'), dic))\n",
+    "repl = list(map(lambda el: el.replace('\\n', '').split('/s/'), dic))\n",
     "for r in repl:\n",
     "    if r[2] == 'b':\n",
     "        r[0] = '\\\\b' + r[0] + '\\\\b'\n",
@@ -197,6 +155,91 @@
     "str = '([^\\x2D])([А-яЁё])(\\x2D\\2){2,}([^\\x2D])/$1$2$4/b/0'\n",
     "re.sub(r'\\$(\\d+)', r'\\\\g<\\1>', str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'овощи, фрукты и чо? бла-бла-бла'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = '-и чо\\?/s/и так далее /s/b/s/0'\n",
+    "r = r.split('/s/')\n",
+    "if r[2] == 'b':\n",
+    "    r[0] = '\\\\b' + r[0] + '\\\\b'\n",
+    "if r[2] == 'r':\n",
+    "    r[0] = r[0] + '\\\\b'\n",
+    "if r[2] == 'l':\n",
+    "    r[0] = '\\\\b' + r[0]\n",
+    "if int(r[3]) == 0:\n",
+    "    fl = re.IGNORECASE\n",
+    "else:\n",
+    "    fl = 0\n",
+    "\n",
+    "testStr = 'овощи, фрукты и чо? бла-бла-бла'\n",
+    "re.sub(r[0], r[1], testStr, flags = fl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r[3] = int(r[3])\n",
+    "m = re.match(r'\\w', r[0][0])\n",
+    "a = 1\n",
+    "(not m) & (a != 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st = 'abcd'\n",
+    "st[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
