--- a/playground/Untitled.ipynb
+++ b/playground/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'овощи, фрукты и чо? бла-бла-бла'"
+       "'когда развернули битые стёкла...'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r = '-и чо\\?/s/и так далее /s/b/s/0'\n",
+    "r = r'(\\w+(ала|ать|ают|би[влиоты]{1,2}|[вжт]али|[вглш]ая|еив|енят|ибла|ивал|иеся|ила|ирал|ирая|ить|лжны|лись|мите|[нт]ели|нил|нули|нял|няю|овел|отер|руша|сил|ться|ший|ые|ются|ющих|яют|[гжкхшнщ]{1,2}ие)\\b\\s?(\\w+[ыи]е)?)\\s{1,4}(\\bброне)?(ст[её]кла\\b)/s/\\g<1> \\g<4>стёкла/s/n/s/0'\n",
     "r = r.split('/s/')\n",
     "if r[2] == 'b':\n",
     "    r[0] = '\\\\b' + r[0] + '\\\\b'\n",
@@ -186,7 +186,7 @@
     "else:\n",
     "    fl = 0\n",
     "\n",
-    "testStr = 'овощи, фрукты и чо? бла-бла-бла'\n",
+    "testStr = 'когда развернули битые стекла...'\n",
     "re.sub(r[0], r[1], testStr, flags = fl)"
    ]
   },
@@ -215,23 +215,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d'"
+       "2"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "st = 'abcd'\n",
-    "st[-1]"
+    "7 % 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'length' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-621e6860d8fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlength\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'length' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "length(r)"
    ]
   },
   {
