--- a/playground/Untitled.ipynb
+++ b/playground/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'когда развернули битые стёкла...'"
+       "'свечи в витых настенных канделябрах отбрасывали…'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r = r'(\\w+(ала|ать|ают|би[влиоты]{1,2}|[вжт]али|[вглш]ая|еив|енят|ибла|ивал|иеся|ила|ирал|ирая|ить|лжны|лись|мите|[нт]ели|нил|нули|нял|няю|овел|отер|руша|сил|ться|ший|ые|ются|ющих|яют|[гжкхшнщ]{1,2}ие)\\b\\s?(\\w+[ыи]е)?)\\s{1,4}(\\bброне)?(ст[её]кла\\b)/s/\\g<1> \\g<4>стёкла/s/n/s/0'\n",
+    "r = r'\\s\\s+/s/ /s/n/s/0'\n",
     "r = r.split('/s/')\n",
     "if r[2] == 'b':\n",
     "    r[0] = '\\\\b' + r[0] + '\\\\b'\n",
@@ -186,13 +186,13 @@
     "else:\n",
     "    fl = 0\n",
     "\n",
-    "testStr = 'когда развернули битые стекла...'\n",
-    "re.sub(r[0], r[1], testStr, flags = fl)"
+    "testStr = 'свечи    в  витых       настенных  канделябрах отбрасывали…'\n",
+    "re.sub(r[0], r[1], testStr, flags = fl)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "False"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,23 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "['свечи\\\\sотбрасывали', 'свЕчи отбрасывали', 'n', '0']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "st = 'abcd'\n",
-    "7 % 5"
+    "r\n"
    ]
   },
   {
