--- a/playground/Untitled.ipynb
+++ b/playground/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'свечи в витых настенных канделябрах отбрасывали…'"
+       "'Очередной урок профЕссора Флитвика'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r = r'\\s\\s+/s/ /s/n/s/0'\n",
+    "r = r'(\\b([Уу]рок)\\b)\\s{1,4}(\\bпрофессор[Аа]\\b)\\s{1,4}([А-ЯЁ]\\w+\\b)/s/\\g<1> профЕссора \\g<4>/s/n/s/1'\n",
     "r = r.split('/s/')\n",
     "if r[2] == 'b':\n",
     "    r[0] = '\\\\b' + r[0] + '\\\\b'\n",
@@ -186,7 +186,7 @@
     "else:\n",
     "    fl = 0\n",
     "\n",
-    "testStr = 'свечи    в  витых       настенных  канделябрах отбрасывали…'\n",
+    "testStr = 'Очередной урок профессорА Флитвика'\n",
     "re.sub(r[0], r[1], testStr, flags = fl)\n"
    ]
   },
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
