New text, updated to work with python 3.7

--- a/playground/Untitled.ipynb
+++ b/playground/Untitled.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import ast"
    ]
   },
   {
@@ -256,6 +257,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57572"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = \"pron.dic\"\n",
+    "with open('../dicts/' + d, 'r') as dic:\n",
+    "    allVocs = dic.readlines()\n",
+    "    \n",
+    "len(allVocs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'отгрызали=<phoneme alphabet=\"x-sampa\" ph=\\'6tgrI\\\\z\"al_ji\\'/>\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "line = allVocs[57465]\n",
+    "text = \"какой-то текст, они что-то там отгрызали и были щасливы\"\n",
+    "line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "какой-то текст, они что-то там <phoneme alphabet=\"x-sampa\" ph='6tgrI\\z\"al_ji'/> и были щасливы\n"
+     ]
+    }
+   ],
+   "source": [
+    "flag = re.IGNORECASE\n",
+    "word = '\\\\b' + line[0:line.find('=')] + '\\\\b'\n",
+    "newWord = line[line.find('=') + 1:].strip().replace('\\\\', '\\\\\\\\')\n",
+    "newLine = re.sub(word, newWord, text, flags = flag)\n",
+    "print(newLine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<phoneme alphabet=\"x-sampa\" ph='6tgrI\\z\"al_ji'/>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(newWord)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4.7e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "t1 = datetime.datetime.now()\n",
+    "t2 = datetime.datetime.now()\n",
+    "print((t1 - t2).total_seconds())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -278,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
