--- a/playground/homographs.ipynb
+++ b/playground/homographs.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../dicts/all_omographs_test_out.hmg\", 'r') as f:\n",
+    "with open(\"../dicts/all_omographs.hmg\", 'r') as f:\n",
     "    dictEntr = list(f.readlines())\n",
     "with open('../text/fanfics.txt', 'r') as f:\n",
     "    text = f.read().replace('\\xa0', ' ')\n",
@@ -46,14 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"в центральном ряду…\"\n",
+    "text_unsigned = text.replace('!', '.').replace('?', '.').replace('…', '.').replace('–', '-').replace('—', '-').replace('. -', ', -').replace('ё', 'е').replace('Ё', 'Е')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1759.100555\n"
+      "0.7499070000000001\n"
      ]
     }
    ],
@@ -97,6 +107,56 @@
     "    allOcs = Parallel(n_jobs = num_cores)(delayed(findOccur)(ind, line) for ind, line in enumerate(dictEntr[:-1]))\n",
     "print(time.clock() - t0)\n",
     "allOcs = list(itertools.chain.from_iterable(allOcs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[19648, 14, ['в центральном', '']]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allOcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_sre.SRE_Match object; span=(0, 2), match=' в'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "opts = dictEntr[pr[0]][(dictEntr[pr[0]].find('=') + 1):-1].split(',')\n",
+    "scores = [0] * len(opts)\n",
+    "insts = [0] * len(opts)\n",
+    "opt = 1\n",
+    "st = ''\n",
+    "\n",
+    "before = dictEntr[pr[0] + 2 + opt*3][(dictEntr[pr[0] + 2 + opt*3].find(':') + 1):-1]\n",
+    "after = dictEntr[pr[0] + 3 + opt*3][(dictEntr[pr[0] + 3 + opt*3].find(':') + 1):-1]\n",
+    "insts[opt] = before.count('|') + after.count('|')\n",
+    "before_log = pr[2][0]\n",
+    "after_log = pr[2][1]\n",
+    "\n",
+    "m = re.search(before, \" \" + pr[2][0], re.I)\n",
+    "print(m)"
    ]
   },
   {
