--- a/playground/homographs.ipynb
+++ b/playground/homographs.ipynb
@@ -233,6 +233,55 @@
     "        out.write(log_dict[key])\n",
     "        out.write('\\n-----------\\n\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('громче и громче', 'громче', ' и громче')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = 'становился все громче и громче…'\n",
+    "pattern = r'\\b((\\w+)(:? и \\2)|\\w+ла|\\w+ло|\\w+ет|\\w+ется|\\w+ешь|\\w+ит|\\w+ится|\\w+лось|больше \\w+ли|было|в порядке|вернуть|время|дело|для|еще \\w+ли|еще \\w+лись|еще|же|звонили колокола|знаю|зря|исправить|казалось|лето|неохотно|никак|нормально|понял|порти\\w*|пространство|равно|растрепал\\w*|ревел|сильнее|случайность|смотрел[ао]{1}|так же|такое|утро|хватали и хватали|чего|что|это)\\b'\n",
+    "pattern2 = r'(\\bдо\\b =?)(\\w+ей)'\n",
+    "re.findall(pattern, text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'- Третий закон Голпалотта гласит, - началА  Гермиона, - осторожно, там может быть столик. Гласит, что противоядие от составного зелья - не скинь мою книгу, Мерлина ради - не сводится к смеси противоядий - не врежься в камин - от каждого его компонента.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = '- Третий закон Голпалотта гласит, - начала Гермиона, - осторожно, там может быть столик. Гласит, что противоядие от составного зелья - не скинь мою книгу, Мерлина ради - не сводится к смеси противоядий - не врежься в камин - от каждого его компонента.'\n",
+    "pattern = r', - начала(( \\w+){0,3})\\b'\n",
+    "re.findall(pattern, text)\n",
+    "re.sub(pattern, r', - началА \\g<1>', text)\n",
+    "#for o in re.finditer(pattern, text):\n",
+    "#    print(o.start())\n",
+    "#    print(o.end())"
+   ]
   }
  ],
  "metadata": {
@@ -251,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
