new text and a small bug fix

--- a/playground/homographs.ipynb
+++ b/playground/homographs.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,27 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"в центральном ряду…\"\n",
+    "text = \"они попадают в организм…\\nпродолжить жизнь без тела носителя…\"\n",
     "text_unsigned = text.replace('!', '.').replace('?', '.').replace('…', '.').replace('–', '-').replace('—', '-').replace('. -', ', -').replace('ё', 'е').replace('Ё', 'Е')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7499070000000001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def getRegions(start, end):\n",
@@ -102,25 +94,26 @@
     "            occur = re.finditer('\\\\b' + word + '\\\\b', text)\n",
     "            pos = list(map(lambda o: [ind, o.start(), getRegions(o.start(), o.end()) ], occur))\n",
     "    return pos\n",
-    "t0 = time.clock()\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    allOcs = Parallel(n_jobs = num_cores)(delayed(findOccur)(ind, line) for ind, line in enumerate(dictEntr[:-1]))\n",
-    "print(time.clock() - t0)\n",
+    "\n",
     "allOcs = list(itertools.chain.from_iterable(allOcs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[19648, 14, ['в центральном', '']]]"
+       "[[15147, 4, ['они', 'в организм']],\n",
+       " [21573, 46, ['продолжить жизнь без', 'носителя']]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,14 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_sre.SRE_Match object; span=(0, 2), match=' в'>\n"
+     "ename": "NameError",
+     "evalue": "name 'pr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-affcf58bc8f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mopts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdictEntr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdictEntr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'='\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0minsts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mopt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pr' is not defined"
      ]
     }
    ],
@@ -161,17 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2946.9738260000013\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "manager = multiprocessing.Manager()\n",
     "log_dict = manager.dict({})\n",
@@ -216,10 +205,99 @@
     "        if insts[ind] > insts[resInd]:\n",
     "            resInd = ind\n",
     "    return opts[resInd]\n",
-    "t0 = time.clock()\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
-    "    descs = Parallel(n_jobs = num_cores)(delayed(makeDecision)(pr, 25) for pr in allOcs)\n",
-    "print(time.clock() - t0)"
+    "    descs = Parallel(n_jobs = num_cores)(delayed(makeDecision)(pr, 25) for pr in allOcs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[15147, 4, ['они', 'в организм']],\n",
+       " [21573, 46, ['продолжить жизнь без', 'носителя']]]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "descs\n",
+    "allOcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allOcs.sort(key = lambda el: el[1])\n",
+    "newText = ''\n",
+    "pos = 0\n",
+    "\n",
+    "for pr in allOcs:\n",
+    "    newText += text[pos:pr[1]] + descs[1]\n",
+    "    pos = len(newText)\n",
+    "newText += text[pos:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr = allOcs[0]\n",
+    "newText += text[0:4] + descs[0]\n",
+    "newText\n",
+    "pos = len(newText) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'они попадают в организм…\\nпродолжить жизнь без тела носителя…'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'они тЕладают в организм…\\nпродолжить жизнь без тЕла носителя…'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newText"
    ]
   },
   {
@@ -281,6 +359,32 @@
     "#for o in re.finditer(pattern, text):\n",
     "#    print(o.start())\n",
     "#    print(o.end())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['правильно. ']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text1 = 'правильно и вообще'\n",
+    "text2 = 'правильно'\n",
+    "text3 = 'правильно. Пошли завтракать'\n",
+    "\n",
+    "pattern = r'\\bправильно\\. \\b'\n",
+    "\n",
+    "re.findall(pattern, text3)"
    ]
   }
  ],
