--- a/playground/homographs.ipynb
+++ b/playground/homographs.ipynb
@@ -363,16 +363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['правильно. ']"
+       "['На']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,11 +380,11 @@
    "source": [
     "text1 = 'правильно и вообще'\n",
     "text2 = 'правильно'\n",
-    "text3 = 'правильно. Пошли завтракать'\n",
+    "text3 = 'На'\n",
     "\n",
-    "pattern = r'\\bправильно\\. \\b'\n",
+    "pattern = r'\\bна\\b'\n",
     "\n",
-    "re.findall(pattern, text3)"
+    "re.findall(pattern, text3, re.I)"
    ]
   }
  ],
