--- a/playground/homographs.ipynb
+++ b/playground/homographs.ipynb
@@ -363,28 +363,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['На']"
+       "['все, проехали']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text1 = 'правильно и вообще'\n",
+    "text1 = 'все, проехали'\n",
     "text2 = 'правильно'\n",
     "text3 = 'На'\n",
     "\n",
-    "pattern = r'\\bна\\b'\n",
+    "pattern = r'\\b(все, проехали)\\b'\n",
     "\n",
-    "re.findall(pattern, text3, re.I)"
+    "re.findall(pattern, text1, re.I)"
    ]
   }
  ],
