--- a/playground/test.ipynb
+++ b/playground/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,131 +64,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"\"\"||замыкав=замЫкав,замыкАв\n",
-    "||замыкавшая=замЫкавшая,замыкАвшая\n",
-    "||замыкавшаяся=замЫкавшаяся,замыкАвшаяся\n",
-    "||замыкавшего=замЫкавшего,замыкАвшего\n",
-    "||замыкавшегося=замЫкавшегося,замыкАвшегося\n",
-    "||замыкавшее=замЫкавшее,замыкАвшее\n",
-    "||замыкавшееся=замЫкавшееся,замыкАвшееся\n",
-    "||замыкавшей=замЫкавшей,замыкАвшей\n",
-    "||замыкавшейся=замЫкавшейся,замыкАвшейся\n",
-    "||замыкавшем=замЫкавшем,замыкАвшем\n",
-    "||замыкавшемся=замЫкавшемся,замыкАвшемся\n",
-    "||замыкавшему=замЫкавшему,замыкАвшему\n",
-    "||замыкавшемуся=замЫкавшемуся,замыкАвшемуся\n",
-    "||замыкавшею=замЫкавшею,замыкАвшею\n",
-    "||замыкавшеюся=замЫкавшеюся,замыкАвшеюся\n",
-    "||замыкавши=замЫкавши,замыкАвши\n",
-    "||замыкавшие=замЫкавшие,замыкАвшие\n",
-    "||замыкавшиеся=замЫкавшиеся,замыкАвшиеся\n",
-    "||замыкавший=замЫкавший,замыкАвший\n",
-    "||замыкавшийся=замЫкавшийся,замыкАвшийся\n",
-    "||замыкавшим=замЫкавшим,замыкАвшим\n",
-    "||замыкавшими=замЫкавшими,замыкАвшими\n",
-    "||замыкавшимися=замЫкавшимися,замыкАвшимися\n",
-    "||замыкавшимся=замЫкавшимся,замыкАвшимся\n",
-    "||замыкавшись=замЫкавшись,замыкАвшись\n",
-    "||замыкавших=замЫкавших,замыкАвших\n",
-    "||замыкавшихся=замЫкавшихся,замыкАвшихся\n",
-    "||замыкавшую=замЫкавшую,замыкАвшую\n",
-    "||замыкавшуюся=замЫкавшуюся,замыкАвшуюся\n",
-    "||замыкаем=замЫкаем,замыкАем\n",
-    "||замыкаемся=замЫкаемся,замыкАемся\n",
-    "||замыкает=замЫкает,замыкАет\n",
-    "||замыкаете=замЫкаете,замыкАете\n",
-    "||замыкаетесь=замЫкаетесь,замыкАетесь\n",
-    "||замыкается=замЫкается,замыкАется\n",
-    "||замыкаешь=замЫкаешь,замыкАешь\n",
-    "||замыкаешься=замЫкаешься,замыкАешься\n",
-    "||замыкай=замЫкай,замыкАй\n",
-    "||замыкайся=замЫкайся,замыкАйся\n",
-    "||замыкайте=замЫкайте,замыкАйте\n",
-    "||замыкайтесь=замЫкайтесь,замыкАйтесь\n",
-    "||замыкал=замЫкал,замыкАл\n",
-    "||замыкала=замЫкала,замыкАла\n",
-    "||замыкалась=замЫкалась,замыкАлась\n",
-    "||замыкали=замЫкали,замыкАли\n",
-    "||замыкались=замЫкались,замыкАлись\n",
-    "||замыкало=замЫкало,замыкАло\n",
-    "||замыкалось=замЫкалось,замыкАлось\n",
-    "||замыкался=замЫкался,замыкАлся\n",
-    "||замыкать=замЫкать,замыкАть\n",
-    "||замыкаться=замЫкаться,замыкАться\n",
-    "||замыкаю=замЫкаю,замыкАю\n",
-    "||замыкаюсь=замЫкаюсь,замыкАюсь\n",
-    "||замыкают=замЫкают,замыкАют\n",
-    "||замыкаются=замЫкаются,замыкАются\"\"\""
+    "text = \"\"\"||характерен=харАктерен,характЕрен\n",
+    "||характерна=харАктерна,характЕрна\n",
+    "||характерная=харАктерная,характЕрная\n",
+    "||характернее=харАктернее,характЕрнее\n",
+    "||характерней=харАктерней,характЕрней\n",
+    "||характерно=характЕрно,харАктерно\n",
+    "||характерного=харАктерного,характЕрного\n",
+    "||характерное=харАктерное,характЕрное\n",
+    "||характерной=харАктерной,характЕрной\n",
+    "||характерном=харАктерном,характЕрном\n",
+    "||характерному=харАктерному,характЕрному\n",
+    "||характерностей=харАктерностей,характЕрностей\n",
+    "||характерности=харАктерности,характЕрности\n",
+    "||характерность=харАктерность,характЕрность\n",
+    "||характерностью=харАктерностью,характЕрностью\n",
+    "||характерностям=харАктерностям,характЕрностям\n",
+    "||характерностями=харАктерностями,характЕрностями\n",
+    "||характерностях=харАктерностях,характЕрностях\n",
+    "||характерною=харАктерною,характЕрною\n",
+    "||характерную=харАктерную,характЕрную\n",
+    "||характерны=харАктерны,характЕрны\n",
+    "||характерные=харАктерные,характЕрные\n",
+    "||характерный=харАктерный,характЕрный\n",
+    "||характерным=харАктерным,характЕрным\n",
+    "||характерными=харАктерными,характЕрными\n",
+    "||характерных=харАктерных,характЕрных\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||замыкав=замыкАв,замЫкав\n",
-      "||замыкавшая=замыкАвшая,замЫкавшая\n",
-      "||замыкавшаяся=замыкАвшаяся,замЫкавшаяся\n",
-      "||замыкавшего=замыкАвшего,замЫкавшего\n",
-      "||замыкавшегося=замыкАвшегося,замЫкавшегося\n",
-      "||замыкавшее=замыкАвшее,замЫкавшее\n",
-      "||замыкавшееся=замыкАвшееся,замЫкавшееся\n",
-      "||замыкавшей=замыкАвшей,замЫкавшей\n",
-      "||замыкавшейся=замыкАвшейся,замЫкавшейся\n",
-      "||замыкавшем=замыкАвшем,замЫкавшем\n",
-      "||замыкавшемся=замыкАвшемся,замЫкавшемся\n",
-      "||замыкавшему=замыкАвшему,замЫкавшему\n",
-      "||замыкавшемуся=замыкАвшемуся,замЫкавшемуся\n",
-      "||замыкавшею=замыкАвшею,замЫкавшею\n",
-      "||замыкавшеюся=замыкАвшеюся,замЫкавшеюся\n",
-      "||замыкавши=замыкАвши,замЫкавши\n",
-      "||замыкавшие=замыкАвшие,замЫкавшие\n",
-      "||замыкавшиеся=замыкАвшиеся,замЫкавшиеся\n",
-      "||замыкавший=замыкАвший,замЫкавший\n",
-      "||замыкавшийся=замыкАвшийся,замЫкавшийся\n",
-      "||замыкавшим=замыкАвшим,замЫкавшим\n",
-      "||замыкавшими=замыкАвшими,замЫкавшими\n",
-      "||замыкавшимися=замыкАвшимися,замЫкавшимися\n",
-      "||замыкавшимся=замыкАвшимся,замЫкавшимся\n",
-      "||замыкавшись=замыкАвшись,замЫкавшись\n",
-      "||замыкавших=замыкАвших,замЫкавших\n",
-      "||замыкавшихся=замыкАвшихся,замЫкавшихся\n",
-      "||замыкавшую=замыкАвшую,замЫкавшую\n",
-      "||замыкавшуюся=замыкАвшуюся,замЫкавшуюся\n",
-      "||замыкаем=замыкАем,замЫкаем\n",
-      "||замыкаемся=замыкАемся,замЫкаемся\n",
-      "||замыкает=замыкАет,замЫкает\n",
-      "||замыкаете=замыкАете,замЫкаете\n",
-      "||замыкаетесь=замыкАетесь,замЫкаетесь\n",
-      "||замыкается=замыкАется,замЫкается\n",
-      "||замыкаешь=замыкАешь,замЫкаешь\n",
-      "||замыкаешься=замыкАешься,замЫкаешься\n",
-      "||замыкай=замыкАй,замЫкай\n",
-      "||замыкайся=замыкАйся,замЫкайся\n",
-      "||замыкайте=замыкАйте,замЫкайте\n",
-      "||замыкайтесь=замыкАйтесь,замЫкайтесь\n",
-      "||замыкал=замыкАл,замЫкал\n",
-      "||замыкала=замыкАла,замЫкала\n",
-      "||замыкалась=замыкАлась,замЫкалась\n",
-      "||замыкали=замыкАли,замЫкали\n",
-      "||замыкались=замыкАлись,замЫкались\n",
-      "||замыкало=замыкАло,замЫкало\n",
-      "||замыкалось=замыкАлось,замЫкалось\n",
-      "||замыкался=замыкАлся,замЫкался\n",
-      "||замыкать=замыкАть,замЫкать\n",
-      "||замыкаться=замыкАться,замЫкаться\n",
-      "||замыкаю=замыкАю,замЫкаю\n",
-      "||замыкаюсь=замыкАюсь,замЫкаюсь\n",
-      "||замыкают=замыкАют,замЫкают\n",
-      "||замыкаются=замыкАются,замЫкаются\n"
+      "||характерен=характЕрен,харАктерен\n",
+      "||характерна=характЕрна,харАктерна\n",
+      "||характерная=характЕрная,харАктерная\n",
+      "||характернее=характЕрнее,харАктернее\n",
+      "||характерней=характЕрней,харАктерней\n",
+      "||характерно=харАктерно,характЕрно\n",
+      "||характерного=характЕрного,харАктерного\n",
+      "||характерное=характЕрное,харАктерное\n",
+      "||характерной=характЕрной,харАктерной\n",
+      "||характерном=характЕрном,харАктерном\n",
+      "||характерному=характЕрному,харАктерному\n",
+      "||характерностей=характЕрностей,харАктерностей\n",
+      "||характерности=характЕрности,харАктерности\n",
+      "||характерность=характЕрность,харАктерность\n",
+      "||характерностью=характЕрностью,харАктерностью\n",
+      "||характерностям=характЕрностям,харАктерностям\n",
+      "||характерностями=характЕрностями,харАктерностями\n",
+      "||характерностях=характЕрностях,харАктерностях\n",
+      "||характерною=характЕрною,харАктерною\n",
+      "||характерную=характЕрную,харАктерную\n",
+      "||характерны=характЕрны,харАктерны\n",
+      "||характерные=характЕрные,харАктерные\n",
+      "||характерный=характЕрный,харАктерный\n",
+      "||характерным=характЕрным,харАктерным\n",
+      "||характерными=характЕрными,харАктерными\n",
+      "||характерных=характЕрных,харАктерных\n"
      ]
     }
    ],
@@ -217,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
