--- a/playground/homographs.ipynb
+++ b/playground/homographs.ipynb
@@ -731,23 +731,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('громче и громче', 'громче', ' и громче')]"
+       "['все, что']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = 'становился все громче и громче…'\n",
-    "pattern = r'\\b((\\w+)(:? и \\2)|\\w+ла|\\w+ло|\\w+ет|\\w+ется|\\w+ешь|\\w+ит|\\w+ится|\\w+лось|больше \\w+ли|было|в порядке|вернуть|время|дело|для|еще \\w+ли|еще \\w+лись|еще|же|звонили колокола|знаю|зря|исправить|казалось|лето|неохотно|никак|нормально|понял|порти\\w*|пространство|равно|растрепал\\w*|ревел|сильнее|случайность|смотрел[ао]{1}|так же|такое|утро|хватали и хватали|чего|что|это)\\b'\n",
+    "text = 'все, что они успеют, это выпить на прощание'\n",
+    "pattern = r'все, что'\n",
     "pattern2 = r'(\\bдо\\b =?)(\\w+ей)'\n",
     "re.findall(pattern, text)\n"
    ]
@@ -807,7 +807,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -821,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
